1.create and delete ecs severs (#65)